--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,10 @@ Thumbs.db
 frontend/node_modules/
 frontend/dist/
 frontend/.env.local
+frontend/coverage/
+
+# Test Coverage
+target/site/jacoco/
+*.exec
+coverage/
+.nyc_output/
