--- a/studybuddy-mobile/app.json
+++ b/studybuddy-mobile/app.json
@@ -4,24 +4,44 @@
     "slug": "studybuddy-mobile",
     "version": "1.0.0",
     "orientation": "portrait",
-    "platforms": ["ios", "android"],
+    "platforms": [
+      "ios",
+      "android"
+    ],
     "userInterfaceStyle": "automatic",
     "scheme": "studybuddy",
     "splash": {
       "backgroundColor": "#0f172a",
       "resizeMode": "contain"
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "infoPlist": {
+        "NSCameraUsageDescription": "StudyBuddy needs access to your camera for video sessions with experts and study groups.",
+        "NSMicrophoneUsageDescription": "StudyBuddy needs access to your microphone for audio in video sessions.",
+        "NSPhotoLibraryUsageDescription": "StudyBuddy needs access to your photo library to share files in study groups."
+      }
     },
     "android": {
-      "package": "com.studybuddy.app"
+      "package": "com.studybuddy.app",
+      "permissions": [
+        "android.permission.CAMERA",
+        "android.permission.RECORD_AUDIO",
+        "android.permission.MODIFY_AUDIO_SETTINGS",
+        "android.permission.READ_EXTERNAL_STORAGE",
+        "android.permission.WRITE_EXTERNAL_STORAGE"
+      ]
     },
     "web": {
       "bundler": "metro"
     },
-    "plugins": ["expo-secure-store"],
+    "plugins": [
+      "expo-secure-store",
+      "expo-web-browser"
+    ],
     "extra": {
       "eas": {
         "projectId": "replace-with-eas-project-id"
