--- a/studybuddy-mobile/package.json
+++ b/studybuddy-mobile/package.json
@@ -20,12 +20,15 @@
     "@tanstack/react-query": "^4.35.10",
     "axios": "^1.7.3",
     "expo": "~54.0.0",
+    "expo-auth-session": "~7.0.10",
     "expo-clipboard": "~8.0.8",
     "expo-constants": "~18.0.12",
+    "expo-crypto": "~15.0.8",
     "expo-document-picker": "~14.0.8",
     "expo-linear-gradient": "~15.0.8",
     "expo-secure-store": "~15.0.8",
     "expo-status-bar": "~3.0.9",
+    "expo-web-browser": "~15.0.10",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.51.5",
