docker for- studybuddy mobile

--- a/env.example
+++ b/env.example
@@ -69,3 +69,18 @@ VITE_API_BASE_URL=http://localhost:8080
 # For local development: ws://localhost:8080
 VITE_WS_BASE_URL=ws://localhost:8080
 
+# ============================================
+# Mobile App Configuration
+# ============================================
+
+# API Base URL for mobile app
+# For localhost/emulator: http://localhost:8080
+# For physical device: http://YOUR_MACHINE_IP:8080
+# For Docker backend: http://YOUR_MACHINE_IP:8080 (use host IP, not container name)
+EXPO_PUBLIC_API_BASE_URL=http://localhost:8080
+
+# WebSocket Base URL for mobile app
+# For localhost/emulator: ws://localhost:8080
+# For physical device: ws://YOUR_MACHINE_IP:8080
+EXPO_PUBLIC_WS_BASE_URL=ws://localhost:8080
+
