--- a/env.example
+++ b/env.example
@@ -23,6 +23,16 @@ POSTGRES_DB=studybuddy
 POSTGRES_USER=studybuddy
 POSTGRES_PASSWORD=studybuddy_password
 
+# Spring Boot Database Configuration (for local development)
+# These override application.properties values
+# For local development with PostgreSQL:
+# SPRING_DATASOURCE_URL=jdbc:postgresql://localhost:5432/studybuddy
+# SPRING_DATASOURCE_USERNAME=studybuddy
+# SPRING_DATASOURCE_PASSWORD=studybuddy_password
+# SPRING_DATASOURCE_DRIVER_CLASS_NAME=org.postgresql.Driver
+# SPRING_JPA_DATABASE_PLATFORM=org.hibernate.dialect.PostgreSQLDialect
+# SPRING_JPA_HIBERNATE_DDL_AUTO=update
+
 # ============================================
 # OAuth2 Configuration (Optional)
 # ============================================
