--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,21 +4,35 @@ server.port=8080
 # Listen on all network interfaces to allow mobile app connections
 server.address=0.0.0.0
 
-# Database Configuration (H2 for MVP)
-spring.datasource.url=jdbc:h2:file:./data/studybuddy
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+# Database Configuration (PostgreSQL)
+# Environment variables override these defaults (used in Docker)
+# For local development: Set SPRING_DATASOURCE_URL, SPRING_DATASOURCE_USERNAME, SPRING_DATASOURCE_PASSWORD
+# For Docker: These are set via docker-compose.yml environment variables
+# Database Configuration (PostgreSQL)
+# Temporarily hardcoded for testing - will switch back to environment variables
+spring.datasource.url=jdbc:postgresql://localhost:5433/studybuddy?sslmode=disable
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.username=studybuddy
+spring.datasource.password=studybuddy_password
+# To use environment variables, uncomment below and comment above:
+# spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/studybuddy?sslmode=disable}
+# spring.datasource.driverClassName=${SPRING_DATASOURCE_DRIVER_CLASS_NAME:org.postgresql.Driver}
+# spring.datasource.username=${SPRING_DATASOURCE_USERNAME:studybuddy}
+# spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:studybuddy_password}
+# Connection pool settings
+spring.datasource.hikari.connection-timeout=20000
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=5
 
 # JPA/Hibernate Configuration
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-# Temporarily set to 'create' to fix schema - change back to 'update' after first successful startup
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.database-platform=${SPRING_JPA_DATABASE_PLATFORM:org.hibernate.dialect.PostgreSQLDialect}
+# Use 'update' for production, 'create' only for initial schema creation
+spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO:update}
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-# H2 Console (for development)
-spring.h2.console.enabled=true
+# H2 Console (disabled for PostgreSQL)
+spring.h2.console.enabled=false
 spring.h2.console.path=/h2-console
 
 # JWT Configuration
